src/cockpit/389-console/src/css/ds.css
.ds-logo {
    margin: 5px;
}

.ds-logo-style {
    margin: 10px;
    margin-bottom: 20px;
}

.ds-container {
    margin: 0;
    padding: 0 !important;
    display: flex;
}

.ds-inline {
    display: inline-block !important;
    vertical-align: top !important;
}

.ds-refresh {
    background-color: #0088ce;
    background-image: linear-gradient(to bottom, #39a5dc 0, #0088ce 100%);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr="#ff39a5dc", endColorstr="#ff0088ce", GradientType=0);
    border-color: #00659c;
    color: #fff;
    padding: 3px;
    box-shadow: 0 3px 3px rgb(3 3 3 / 10%);
    border-radius: 50%;
    border: 1px solid transparent;
    text-align: center;
    vertical-align: middle;
}

.ds-refresh-sm {
    background-color: #0088ce;
    background-image: linear-gradient(to bottom, #39a5dc 0, #0088ce 100%);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr="#ff39a5dc", endColorstr="#ff0088ce", GradientType=0);
    border-color: #00659c;
    color: #fff;
    padding: 2px;
    box-shadow: 0 2px 2px rgb(3 3 3 / 10%);
    border-radius: 50%;
    border: 1px solid transparent;
    text-align: center;
    vertical-align: middle;
}

td {
    white-space: normal;
    overflow-wrap: break-word !important;
    max-width: 200px !important;
}

.ds-no-padding {
    padding: 0 !important;
}

.ds-width-sm {
    max-width: 100px;
}

.ds-tree {
    border: 1px solid #909090;
    width: 300px;
    min-width: 300px;
    min-height: 350px;
    max-height: 650px;
    margin-bottom: 5px;
    overflow: auto;
    margin-left: 15px;
    margin-top: 20px;
}

.pf-theme-dark .ds-tree {
    border: 1px solid #909090;
    width: 300px;
    min-width: 300px;
    min-height: 350px;
    max-height: 550px;
    margin-bottom: 5px;
    overflow: auto;
    margin-left: 15px;
    margin-top: 20px;
}

.pf-theme-dark .pf-c-form-control {
  --pf-c-form__label-required--Color: var(--pf-global--danger-color--200);
  --pf-c-modal-box--m-danger__title-icon--Color: var(--pf-global--danger-color--200);
  --pf-c-form-control--invalid--BorderBottomColor: var(--pf-global--danger-color--200);
  --pf-c-form__helper-text--m-error--Color: var(--pf-global--danger-color--200);
  --pf-c-form-control--invalid--BackgroundUrl: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23ff7468' d='M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z'/%3E%3C/svg%3E");
}

.pf-theme-dark .pf-c-button.pf-m-danger {
    background-color: var(--pf-global--danger-color--200);
}

.ds-pf-red-color {
    color: #f54f42 !important;
}

.ds-pf-blue-color {
    color: #39a5dc !important;
}

.ds-pf-yellow-color {
    color: #f0ab00 !important;
}

.ds-pf-green-color {
    color: green !important;
}

.ds-editor-tree {
    max-height: 70vh;
    overflow: auto;
}

.ds-disabled {
    pointer-events: none;
    opacity: 0.5;
}

.ds-hidden {
    display: none;
}

.ds-error-msg {
    margin-top: 5px;
    color: red;
    font-size: 12px;
}

.ds-right-align {
    text-align: right;
}

.ds-left-align {
    text-align: left !important;
}

.ds-label {
    /* mimics PF4 FormGroup Label */
    font-size: 14px;
    font-weight: 600;
    line-height: 18.2px;
    padding-top: 8px;
}

.ds-label-checkbox {
    /* mimics PF4 FormGroup Label */
    font-size: 14px;
    font-weight: 600;
    line-height: 18.2px;
    /* padding-top: 8px; */
}

.ds-dblink-dropdown {
    width: 140px !important;
    text-align: left;
}

.ds-dblink-dropdown a {
    padding: 0 !important;
    padding-left: 10px !important;
    line-height: 0 !important;
    width: 140px !important;
    text-align: left;
}

.ds-modal-list {
    border: 1px solid #909090;
    min-height: 60px;
}

.ds-box {
    min-height: 350px !important;
    max-height: 350px !important;
    border: 0.5px solid #909090;
    overflow-y: scroll;
}

.ds-button-right {
    width: 120px !important;
    margin-top: 5px;
    float: right !important;
    display: inline-block !important;
}

.ds-button-left {
    width: 120px;
    max-width: 150px;
    margin-top: 5px;
    float: left !important;
    display: inline-block !important;
}

.ds-panel-left {
    width: 50%;
}

.ds-panel-right {
    width: 50%;
}

.ds-operate-spinner {
    margin-left: 10px;
    top: 10px;
}

p {
    line-height: 1;
    white-space: normal;
}

textarea {
    margin-top: 5px;
    padding-top: 5px;
    vertical-align: top;
    width: 315px;
    height: 80px;
    overflow-wrap: break-word !important;
    line-height: 1;
}

.ds-textarea {
    width: 100%;
    min-height: 250px;
    font-size: 14px !important;
    font-family: monospace !important;

}

.ds-logarea {
    margin-top: 5px;
    padding-top: 5px;
    vertical-align: top;
    width: 100% !important;
    min-height: 500px !important;
    overflow-wrap: break-word !important;
    line-height: 1;
    font-family: monospace !important;
    overflow-y: scroll;
    font-size: 12px !important;
}

.ds-conflict {
    margin-top: 5px;
    padding-top: 5px;
    vertical-align: top;
    min-height: 150px !important;
    white-space: pre;
    line-height: 1.5;
    font-family: monospace !important;
}

.ds-server-action {
    margin-left: 10px;
    margin-right: 10px;
    display: inline-block;
}

.ds-float-right {
    float: right !important;
}

.ds-float-left {
    float: left !important;
}

.ds-config-header {
    margin-bottom: 30px;
    text-align: center;
}

.ds-sub-header {
    margin-top: 10px !important;
    margin-bottom: 10px;
}

.ds-margin-top {
    margin-top: 10px !important;
}

.ds-margin-top-sm {
    margin-top: 5px !important;
}

.ds-margin-top-med {
    margin-top: 15px !important;
}

.ds-margin-top-lg {
    margin-top: 20px !important;
}

.ds-margin-top-xlg {
    margin-top: 35px !important;
}

.ds-margin-top-xxlg {
    margin-top: 45px !important;
}

.ds-modal-spinner {
    margin-top: 10px;
    text-align: center;
}

.modal {
  overflow-y: auto;
}

.ds-hide-vertical-scrollbar {
    overflow-y: hidden !important;
}

.ds-indent {
    margin-left: 15px !important;
    margin-right: 15px !important;
}

.ds-indent-md {
    margin-left: 20px !important;
    margin-right: 20px !important;
}

.ds-indent-lg {
    margin-left: 30px !important;
    margin-right: 30px !important;
}

.ds-left-indent {
    margin-left: 15px !important;
}

.ds-left-indent-md {
    margin-left: 30px !important;
}

.ds-left-indent-lg {
    margin-left: 50px !important;
}

.ds-left-indent-xlg {
    margin-left: 70px !important;
}

.ds-tree-content {
    margin-left: 35px;
    margin-right: 15px;
    margin-top: 25px;
    width: 100%;
}

.ds-left-margin {
    margin-left: 10px !important;
}

.ds-left-margin-md {
    /* same as ds-tree - used by create suffix button */
    margin-left: 15px !important;
}

.ds-right-margin {
    margin-right: 10px !important;
}

.ds-radio-indent {
    margin-left: 25px !important;
}

.ds-margin-left-sm {
    margin-left: 30px !important;
}

.ds-margin-left {
    margin-left: 40px !important;
}

.ds-margin-right {
    margin-right: 5px !important;
}

.ds-margin-bottom {
    margin-bottom: 10px !important;
}

.ds-margin-bottom-md {
    margin-bottom: 20px !important;
}

.ds-center {
    text-align: center;
}

.ds-loading {
    position: fixed;
    top: 25%;
    left: 50%;
    transform: translate(-25%, -35%);
}

.ds-raise-field {
    margin-top: -3px;
}

.ds-raise-field-md {
    margin-top: -6px;
}

.ds-lower-field {
    margin-top: 3px;
}

.ds-lower-field-md {
    margin-top: 6px;
}

.ds-lower-field-lg {
    margin-top: 10px;
}

.content-view-pf-pagination > div > span:last-child {
    position: relative;
}

.ds-plugin-spinner {
    margin-top: 20px;
    margin-bottom: 10px;
    margin-left: 80px;
}

@media screen and (max-width >= 1300px) {
    .ds-plugin-spinner {
        margin-left: 0;
    }
}

/* Link */
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #228bc0;
}

/* Nav stacked (vertical) bar */
.nav-pills > li > a {
    padding: 3px 15px;
    font-size: 15px;
    border-radius: 3px;
}

.nav-pills > li.active > a {
    color: #fff !important;
}

.ds-plugin-tab-header {
    position: relative;
    top: -16px;
}

@media screen and (max-width >= 770px) {
    .ds-plugin-tab-header {
        margin-top: 0;
        margin-bottom: 0;
    }
}

.rbt-token {
    background-color: #ededed;
    color: #363636;
}

.rbt-input-multi {
    height: auto !important;
}

.list-group {
    margin-bottom: 1px !important;
}

.list-view-pf-view {
    margin-top: 10px;
}

.ds-fadein {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.5s linear;
}

.ds-fadeout {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s 0s, opacity 1s linear;
}

.ds-word-wrap {
    overflow-wrap: break-word;
}

.ds-suffix-header {
    font-size: 20px;
    margin-bottom: 15px;
    padding-top: 5px;
}

.ds-no-padding {
    padding-right: 0 !important;
    padding-top: 0 !important;
}

.ds-dropdown-padding button {
    padding-top: 2px !important;
}

.ds-instance-select {
    margin-right: 10px !important;
}

.alert {
    max-width: 750px;
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
}

.pf-c-tree-view__node-toggle {
    padding-left: 0 !important;
}

pre {
    white-space: pre-wrap;       /* Since CSS 2.1 */
    white-space: pre-wrap;  /* Mozilla, since 1999 */
    overflow-wrap: break-word;       /* Internet Explorer 5.5+ */
}

.pf-c-alert-group {
    z-index: 20000 !important;
}

.ds-font-size-sm {
    font-size: 12px !important;
}

.ds-font-size-md {
    font-size: 14px !important;
}

/* hopefully this can be removed too.  This is for button spinners */
[role="progressbar"] {
    color: white !important;
}

.ds-disabled-icon svg {
    fill: lightslategray;
}

.ds-warning-icon svg {
    fill: orange;
}

.ds-ok-icon svg {
    fill: green;
}

.ds-info-icon svg {
    fill: rgb(57 165 220);
}

.ds-info-color {
    color: rgb(0 102 204) !important; /* rgb(57, 165, 220); */
}

.ds-icon-sm {
    font-size: 0.7em;
    margin-right: 20px;
}

/* typeAhead Select in modals doesn't fit well, need to make the modal taller */
.ds-modal-select {
    min-height: 350px !important;
}

.ds-modal-select-tall {
    min-height: 600px !important;
}

/* This keeps a modal with Tabs the same size throughout all the tabs */
.ds-modal-repl-agmt {
    min-height: 755px !important;
}

.ds-modal-winsync-agmt {
    min-height: 625px !important;
}

.ds-modal-changelog-export {
    min-height: 525px !important;
}

/* LDAP Editor classes */
.ds-search-input {
    min-width: 550px !important;
}

.ds-badge-bgcolor {
    color: #002952 !important;
    background-color: #e7f1fa !important;
}

.ds-aci-dual-select .pf-c-dual-list-selector__menu {
    min-height: 250px !important;
    max-height: 250px !important;
}

.ds-vert-scroll {
    /* max-height: 100vh !important; */
    max-height: 75%;
    overflow-y: auto;
}

